--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>현밍의 집</title>
+    <title>어서오세요 정현의 집</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,10 +15,21 @@
     </div>
 
     <div class="intro-container" id="intro">
-        <h1>어서오세요, 현밍의 집</h1>
+        <h1>어서오세요 정현의 집</h1>
     </div>
 
     <div class="menu-container hidden" id="menu">
+        <!-- 공지사항 -->
+        <div class="notice" id="notice">
+            <p>📢 우리 집에 오면 지켜야 할 규칙들:</p>
+            <ul>
+                <li>😊 서로 존중하기</li>
+                <li>🚮 쓰레기는 반드시 분리배출</li>
+                <li>📴 조용한 환경을 위해 휴대폰은 진동으로</li>
+                <li>🕒 음식 소요 시간에 여유를 가지기</li>
+            </ul>
+        </div>
+
         <header>
             <h1 class="menu-title">메뉴판</h1>
         </header>
@@ -27,27 +38,27 @@
             <div class="menu-category">
                 <h2>음료</h2>
                 <ul>
-                    <li>아메리카노</li>
-                    <li>카페라떼</li>
-                    <li>오렌지 주스</li>
+                    <li>아메리카노 - 5분 </li>
+                    <li>카페라떼 - 7분 </li>
+                    <li>오렌지 주스 - 1분 </li>
                 </ul>
             </div>
 
             <div class="menu-category">
                 <h2>식사</h2>
                 <ul>
-                    <li>김치찌개</li>
-                    <li>비빔밥</li>
-                    <li>불고기 덮밥</li>
+                    <li>김치찌개 - 15분 - 3,000원</li>
+                    <li>비빔밥 - 12분 - 2,500원</li>
+                    <li>불고기 덮밥 - 10분 - 4,500원</li>
                 </ul>
             </div>
 
             <div class="menu-category">
                 <h2>디저트</h2>
                 <ul>
-                    <li>치즈케이크</li>
-                    <li>마카롱</li>
-                    <li>티라미수</li>
+                    <li>치즈케이크 - 10분 - 5,000원</li>
+                    <li>마카롱 - 8분 - 3,500원</li>
+                    <li>티라미수 - 12분 - 5,500원</li>
                 </ul>
             </div>
         </div>
