--- a/index.html
+++ b/index.html
@@ -5,22 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>어서오세요 정현의 집</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="video-background">
-        <video autoplay muted loop id="background-video">
-            <source src="open.mp4" type="video/mp4">
-            당신의 브라우저는 동영상을 지원하지 않습니다.
-        </video>
-    </div>
+    <!-- 상단 제목 -->
+    <header>
+        <h1 class="menu-title">어서오세요 정현의 집</h1>
+    </header>
 
-    <div class="intro-container" id="intro">
-        <h1>어서오세요 정현의 집</h1>
-    </div>
-
-    <div class="menu-container hidden" id="menu">
-        <!-- 공지사항 -->
-        <div class="notice" id="notice">
+    <div class="content-container">
+        <!-- 공지사항 (규칙들 박스) -->
+        <div class="notice">
             <p>📢 우리 집에 오면 지켜야 할 규칙들:</p>
             <ul>
                 <li>😊 서로 존중하기</li>
@@ -30,40 +26,39 @@
             </ul>
         </div>
 
+        <!-- 메뉴판 -->
         <header>
-            <h1 class="menu-title">메뉴판</h1>
+            <h1 class="menu-title">우리 집 메뉴판</h1>
         </header>
 
         <div class="menu-categories">
             <div class="menu-category">
                 <h2>음료</h2>
                 <ul>
-                    <li>아메리카노 - 5분 </li>
-                    <li>카페라떼 - 7분 </li>
-                    <li>오렌지 주스 - 1분 </li>
+                    <li>아메리카노 - ⏰ 5분 - 💸 3,000원</li>
+                    <li>카페라떼 - ⏰ 7분 - 💸 3,500원</li>
+                    <li>오렌지 주스 - ⏰ 3분 - 💸 4,000원</li>
                 </ul>
             </div>
 
             <div class="menu-category">
                 <h2>식사</h2>
                 <ul>
-                    <li>김치찌개 - 15분 - 3,000원</li>
-                    <li>비빔밥 - 12분 - 2,500원</li>
-                    <li>불고기 덮밥 - 10분 - 4,500원</li>
+                    <li>김치찌개 - ⏰ 15분 - 💸 7,000원</li>
+                    <li>비빔밥 - ⏰ 12분 - 💸 6,500원</li>
+                    <li>불고기 덮밥 - ⏰ 10분 - 💸 7,500원</li>
                 </ul>
             </div>
 
             <div class="menu-category">
                 <h2>디저트</h2>
                 <ul>
-                    <li>치즈케이크 - 10분 - 5,000원</li>
-                    <li>마카롱 - 8분 - 3,500원</li>
-                    <li>티라미수 - 12분 - 5,500원</li>
+                    <li>치즈케이크 - ⏰ 10분 - 💸 5,000원</li>
+                    <li>마카롱 - ⏰ 8분 - 💸 3,500원</li>
+                    <li>티라미수 - ⏰ 12분 - 💸 5,500원</li>
                 </ul>
             </div>
         </div>
     </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
