--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- 동영상 배경 -->
+    <div class="video-background">
+        <video autoplay muted loop playsinline>
+            <source src="open.mp4" type="video/mp4">
+            동영상 지원이 되지 않는 브라우저입니다.
+        </video>
+    </div>
+
     <!-- 상단 제목 -->
     <header>
         <h1 class="menu-title">어서오세요 정현의 집</h1>
@@ -35,27 +43,27 @@
             <div class="menu-category">
                 <h2>음료</h2>
                 <ul>
-                    <li>아메리카노 - ⏰ 5분 - 💸 3,000원</li>
-                    <li>카페라떼 - ⏰ 7분 - 💸 3,500원</li>
-                    <li>오렌지 주스 - ⏰ 3분 - 💸 4,000원</li>
+                    <li>아메리카노 - ⏰ 5분 </li>
+                    <li>카페라떼 - ⏰ 7분 </li>
+                    <li>오렌지 주스 - ⏰ 3분 </li>
                 </ul>
             </div>
 
             <div class="menu-category">
                 <h2>식사</h2>
                 <ul>
-                    <li>김치찌개 - ⏰ 15분 - 💸 7,000원</li>
-                    <li>비빔밥 - ⏰ 12분 - 💸 6,500원</li>
-                    <li>불고기 덮밥 - ⏰ 10분 - 💸 7,500원</li>
+                    <li>돼지 김치찜 - ⏰ 15분 - 💸 3,000원</li>
+                    <li> 스테이크 - ⏰ 22분 - 💸 6,500원</li>
+                    <li> 파스타 - ⏰ 20분 - 💸 4,500원</li>
                 </ul>
             </div>
 
             <div class="menu-category">
                 <h2>디저트</h2>
                 <ul>
-                    <li>치즈케이크 - ⏰ 10분 - 💸 5,000원</li>
-                    <li>마카롱 - ⏰ 8분 - 💸 3,500원</li>
-                    <li>티라미수 - ⏰ 12분 - 💸 5,500원</li>
+                    <li>치즈케이크 - ⏰ 10분 </li>
+                    <li>마카롱 - ⏰ 8분 </li>
+                    <li>티라미수 - ⏰ 12분 </li>
                 </ul>
             </div>
         </div>
