--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <header>
             <h1 class="menu-title">우리 집 메뉴판</h1>
         </header>
-
+        <div class="menu-categories-wrapper">
         <div class="menu-categories">
             <div class="menu-category">
                 <h2>음료</h2>
@@ -68,5 +68,12 @@
             </div>
         </div>
     </div>
+    </div>
+
+    <div class="button-container">
+        <a href="test.html" class="match-button">나와 맞는 음식 궁합 찾아보기</a>
+    </div>
+    
+
 </body>
 </html>
