--- a/test.html
+++ b/test.html
@@ -25,12 +25,9 @@
     <div class="content-container">
         <!-- 테스트 질문 -->
         <div id="question-container">
-            <p class="question-text">당신의 하루를 가장 잘 묘사하는 단어는?</p>
-            <div class="answer-options">
-                <button class="answer-button" data-answer="활기찬">활기찬</button>
-                <button class="answer-button" data-answer="차분한">차분한</button>
-                <button class="answer-button" data-answer="열정적인">열정적인</button>
-                <button class="answer-button" data-answer="편안한">편안한</button>
+            <p id="question-text" class="question-text">테스트를 시작하려면 아래 버튼을 클릭하세요.</p>
+            <div id="answer-options" class="answer-options">
+                <button id="start-button" class="answer-button">시작</button>
             </div>
         </div>
     
@@ -39,8 +36,7 @@
             <p class="result-text">당신에게 어울리는 음식은 <span id="result-food"></span>입니다!</p>
         </div>
     </div>
-    
 
-    <script src="test.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
