--- a/test.html
+++ b/test.html
@@ -34,6 +34,8 @@
         <!-- 결과 출력 -->
         <div id="result-container" style="display: none;">
             <p class="result-text">당신에게 어울리는 음식은 <span id="result-food"></span>입니다!</p>
+            <!-- 돌아가는 버튼 -->
+            <a href="welcome.html" id="back-button" class="answer-button">메인 화면으로 돌아가기</a>
         </div>
     </div>
 
