--- a/index.html
+++ b/index.html
@@ -3,77 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>어서오세요 정현의 집</title>
+    <title>이름 입력</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- 동영상 배경 -->
-    <div class="video-background">
-        <video autoplay muted loop playsinline>
-            <source src="open.mp4" type="video/mp4">
-            동영상 지원이 되지 않는 브라우저입니다.
-        </video>
+    <div class="name-container">
+        <h1>안녕하세요 반갑습니다!</h1>
+        <p>먼저 이름을 적어주세요.</p>
+        <form action="welcome.html" method="GET">
+            <input type="text" name="name" placeholder="이름을 입력하세요" required>
+            <button type="submit">확인</button>
+        </form>
     </div>
-
-    <!-- 상단 제목 -->
-    <header>
-        <h1 class="menu-title">어서오세요 정현의 집</h1>
-    </header>
-
-    <div class="content-container">
-        <!-- 공지사항 (규칙들 박스) -->
-        <div class="notice">
-            <p>📢 우리 집에 오면 지켜야 할 규칙들:</p>
-            <ul>
-                <li>😊 서로 존중하기</li>
-                <li>🚮 쓰레기는 반드시 분리배출</li>
-                <li>📴 조용한 환경을 위해 휴대폰은 진동으로</li>
-                <li>🕒 음식 소요 시간에 여유를 가지기</li>
-            </ul>
-        </div>
-
-        <!-- 메뉴판 -->
-        <header>
-            <h1 class="menu-title">우리 집 메뉴판</h1>
-        </header>
-        <div class="menu-categories-wrapper">
-        <div class="menu-categories">
-            <div class="menu-category">
-                <h2>음료</h2>
-                <ul>
-                    <li>아메리카노 - ⏰ 5분 </li>
-                    <li>카페라떼 - ⏰ 7분 </li>
-                    <li>오렌지 주스 - ⏰ 3분 </li>
-                </ul>
-            </div>
-
-            <div class="menu-category">
-                <h2>식사</h2>
-                <ul>
-                    <li>돼지 김치찜 - ⏰ 15분 - 💸 3,000원</li>
-                    <li> 스테이크 - ⏰ 22분 - 💸 6,500원</li>
-                    <li> 파스타 - ⏰ 20분 - 💸 4,500원</li>
-                </ul>
-            </div>
-
-            <div class="menu-category">
-                <h2>디저트</h2>
-                <ul>
-                    <li>치즈케이크 - ⏰ 10분 </li>
-                    <li>마카롱 - ⏰ 8분 </li>
-                    <li>티라미수 - ⏰ 12분 </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    </div>
-
-    <div class="button-container">
-        <a href="test.html" class="match-button">나와 맞는 음식 궁합 찾아보기</a>
-    </div>
-    
-
 </body>
 </html>
