--- a/test.html
+++ b/test.html
@@ -34,10 +34,12 @@
         <!-- 결과 출력 -->
         <div id="result-container" style="display: none;">
             <p class="result-text">당신에게 어울리는 음식은 <span id="result-food"></span>입니다!</p>
+            <!-- 이미지 추가 -->
+            <img id="result-image" src="" alt="음식 이미지" style="max-width: 100%; height: auto;">
             <!-- 돌아가는 버튼 -->
             <a href="welcome.html" id="back-button" class="answer-button">메인 화면으로 돌아가기</a>
         </div>
-    </div>
+        
 
     <script src="script.js"></script>
 </body>
