--- a/welcome.html
+++ b/welcome.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La Casa de Jeonghyeon</title>
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <!-- 상단 제목 -->
-    <header>
-        <h1 class="menu-title">La Casa de Jeonghyeon</h1>
-    </header>
-
-    <!-- 환영 메시지 -->
-    <div class="welcome-message">
-        <h2>먼 곳까지 와주셔서 감사합니다</h2>
-    </div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>La Casa de Jeonghyeon</title>
+        <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="styles.css">
+        <script>
+            // 이름을 URL 파라미터에서 읽어오는 함수
+            function getNameFromURL() {
+                const params = new URLSearchParams(window.location.search);
+                return params.get('name') || "손"; // 이름이 없으면 "손님" 표시
+            }
+    
+            // 페이지 로드 시 이름을 업데이트
+            window.onload = () => {
+                const name = getNameFromURL();
+                document.getElementById('welcome-name').textContent = `${name}님`;
+            };
+        </script>
+    </head>
+    <body>
+        <!-- 상단 제목 -->
+        <header>
+            <h1 class="menu-title">La Casa de Jeonghyeon</h1>
+        </header>
+    
+        <!-- 환영 메시지 -->
+        <div class="welcome-message">
+            <h2><span id="welcome-name"></span> 먼 곳까지 와주셔서 감사합니다</h2>
+        </div>
 
     <!-- 공지사항 -->
     <div class="notice">
@@ -37,7 +50,7 @@
                 <h2>Wine</h2>
                 <ul>
                     <li>
-                        <img src="#" alt="와인 이미지" style="width: 100px; height: 100px; margin-bottom: 10px;">
+                        <img src="wine.png" alt="와인 이미지" style="width: 100px; height: 100px; margin-bottom: 10px;">
                         Osborne White Porto
                         <p>포르투갈에서 온 달콤한 화이트 포트 와인. 디저트와 완벽한 조화를 이룹니다.</p>
                     </li>
@@ -50,13 +63,8 @@
                 <ul>
                     <li>
                         <img src="#" alt="스테이크 이미지" style="width: 100px; height: 100px; margin-bottom: 10px;">
-                        Steak
-                        <p>완벽한 미디엄 레어로 구워낸 신선한 스테이크.</p>
-                    </li>
-                    <li>
-                        <img src="#" alt="파스타 이미지" style="width: 100px; height: 100px; margin-bottom: 10px;">
-                        Pasta
-                        <p>클래식 이탈리아 레시피로 만든 크림 파스타.</p>
+                        라면 (해장용 +1000원)
+                        <p>진하고 깊은 국물 맛이 일품인 따끈따끈한 라면. 당신의 속을 든든하게 채워줄 완벽한 한 그릇. </p>
                     </li>
                 </ul>
             </div>
@@ -66,14 +74,10 @@
                 <h2>Dessert</h2>
                 <ul>
                     <li>
-                        <img src="#" alt="치즈케이크 이미지" style="width: 100px; height: 100px; margin-bottom: 10px;">
-                        Cheesecake
-                        <p>부드럽고 진한 치즈 맛이 일품인 디저트.</p>
-                    </li>
-                    <li>
-                        <img src="#" alt="마카롱 이미지" style="width: 100px; height: 100px; margin-bottom: 10px;">
-                        Macaron
-                        <p>아몬드와 달콤한 크림으로 만들어진 작은 행복.</p>
+                        <img src="img.jpg" alt="바닐라 아이스크림 이미지" style="width: 100px; height: 100px; margin-bottom: 10px;">
+                        바닐라 아이스크림 (올리브 오일 & 후추)
+                        <p>고급스러운 바닐라 아이스크림에 신선한 올리브 오일과 풍미를 더해주는 후추를 뿌려 특별한 맛의 조화를 선사합니다. 
+                        단맛과 짭짤함이 어우러져 디저트의 새로운 경지를 경험하세요.</p>
                     </li>
                 </ul>
             </div>
