--- a/welcome.html
+++ b/welcome.html
@@ -62,7 +62,7 @@
                 <h2>Food</h2>
                 <ul>
                     <li>
-                        <img src="#" alt="스테이크 이미지" style="width: 100px; height: 100px; margin-bottom: 10px;">
+                        <img src="ramyeon.jpg" alt="스테이크 이미지" style="width: 100px; height: 100px; display: block; margin: 0 auto;">
                         라면 (해장용 +1000원)
                         <p>진하고 깊은 국물 맛이 일품인 따끈따끈한 라면. 당신의 속을 든든하게 채워줄 완벽한 한 그릇. </p>
                     </li>
