--- a/welcome.html
+++ b/welcome.html
@@ -23,7 +23,7 @@
     <body>
         <!-- 상단 제목 -->
         <header>
-            <h1 class="menu-title">La Casa de Jeonghyeon</h1>
+            <h1 class="menu-title">La Casa de Centrale</h1>
         </header>
     
         <!-- 환영 메시지 -->
