index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -1,20 +1,45 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>이름 입력</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>예약 페이지</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="name-container">
-        <h1>안녕하세요 반갑습니다!</h1>
-        <p>먼저 이름을 적어주세요.</p>
-        <form action="welcome.html" method="GET">
-            <input type="text" name="name" placeholder="이름을 입력하세요" required>
-            <button type="submit">확인</button>
-        </form>
-    </div>
+  <div class="name-container">
+    <h1>안녕하세요 반갑습니다!</h1>
+    <p>먼저 예약 정보를 입력해주세요.</p>
+
+    <!-- formsubmit.co로 이메일 전송 -->
+    <form action="https://formsubmit.co/여기에_본인_이메일주소" method="POST">
+      <!-- 숨김 필드: 예약 후 이동할 메뉴판 링크 -->
+      <input type="hidden" name="_next" value="https://yourdomain.com/menu.html">
+      <input type="hidden" name="_subject" value="새 예약이 도착했습니다!">
+
+      <label>이름</label><br>
+      <input type="text" name="name" placeholder="이름을 입력하세요" required><br><br>
+
+      <label>예약 날짜</label><br>
+      <input type="date" name="date" required><br><br>
+
+      <label>예약 시간 (30분 단위)</label><br>
+      <input type="time" name="time" step="1800" required><br><br>
+
+      <label>연락 수단</label><br>
+      <select name="contact_type" required>
+        <option value="">선택하세요</option>
+        <option value="전화">전화</option>
+        <option value="문자">문자</option>
+        <option value="이메일">이메일</option>
+      </select><br><br>
+
+      <label>연락처 / 이메일 주소</label><br>
+      <input type="text" name="contact_info" placeholder="010-XXXX-XXXX 또는 이메일" required><br><br>
+
+      <button type="submit">예약 확인</button>
+    </form>
+  </div>
 </body>
 </html>
