--- a/welcome.html
+++ b/welcome.html
@@ -1,87 +1,96 @@
 <!DOCTYPE html>
 <html lang="ko">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>La Casa de Centrale</title>
-        <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="styles.css">
-        <script>
-            // 이름을 URL 파라미터에서 읽어오는 함수
-            function getNameFromURL() {
-                const params = new URLSearchParams(window.location.search);
-                return params.get('name') || "손"; // 이름이 없으면 "손님" 표시
-            }
-    
-            // 페이지 로드 시 이름을 업데이트
-            window.onload = () => {
-                const name = getNameFromURL();
-                document.getElementById('welcome-name').textContent = `${name}님`;
-            };
-        </script>
-    </head>
-    <body>
-        <!-- 상단 제목 -->
-        <header>
-            <h1 class="menu-title">La Casa de Centrale</h1>
-        </header>
-    
-        <!-- 환영 메시지 -->
-        <div class="welcome-message">
-            <h2><span id="welcome-name"></span> 먼 곳까지 와주셔서 감사합니다</h2>
-        </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>정현 식당</title>
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+  <script>
+    // URL에서 이름 읽기
+    function getNameFromURL() {
+      const params = new URLSearchParams(window.location.search);
+      return params.get('name') || "손님";
+    }
 
-    <!-- 공지사항 -->
-    <div class="notice">
-        <p>📢 공지사항</p>
+    window.onload = () => {
+      const name = getNameFromURL();
+      document.getElementById('welcome-name').textContent = `${name}님`;
+    };
+  </script>
+</head>
+
+<body>
+  <!-- 상단 제목 -->
+  <header>
+    <h1 class="menu-title">정현 식당</h1>
+  </header>
+
+  <!-- 환영 메시지 -->
+  <div class="welcome-message">
+    <h2><span id="welcome-name"></span> 정성 가득한 집밥을 대접합니다 🍚</h2>
+  </div>
+
+  <!-- 공지사항 -->
+  <div class="notice">
+    <p>📢 이용 안내</p>
+    <ul>
+      <li>🥢 정현 식당은 주류 위주 식당이 아닙니다. 따뜻한 식사와 편안한 시간을 위한 공간입니다.</li>
+      <li>🍲 식사는 모두 당일 준비된 재료로 조리됩니다. 메뉴는 계절에 따라 조금씩 달라질 수 있습니다.</li>
+      <li>🚮 식사 후에는 자리에 있는 분리수거함에 정리 부탁드립니다. 손님이 쓰레기통에 들어가면 안 돼요 😆</li>
+      <li>🕒 준비 시간 동안 잠시 기다려주시면, 정성이 담긴 한 상을 대접하겠습니다.</li>
+    </ul>
+  </div>
+
+  <!-- 메뉴판 -->
+  <div class="content-container">
+    <div class="menu-categories-wrapper">
+      <!-- 에피타이저 -->
+      <div class="menu-category">
+        <h2>Appetizer</h2>
         <ul>
-            <li>😊 저희 매장은 주류 위주의 바입니다. 이곳에서 좋은 추억을 쌓아가시면 좋겠습니다.</li>
-            <li>🚮 쓰레기는 self 입니다. 반드시 분리수거 부탁드립니다. 손님은 쓰레기통에 들어갈 수 없습니다.</li>
-            <li>📴 조용한 환경을 위해 걸을 때 조심히 걸어주세요. 아랫집에서 올라와요.</li>
-            <li>🕒 수면이나 기타 요구사항이 있을 때는 반드시 미리 말하셔야 합니다. 즉흥적인 건 금지입니다.</li>
+          <li>
+            <img src="appetizer.jpg" alt="양송이 수프" style="width: 100px; height: 100px; margin-bottom: 10px;">
+            양송이 수프
+            <p>따뜻하고 부드러운 양송이 수프로 입맛을 깨워보세요.</p>
+          </li>
+          <li>
+            <img src="bread.jpg" alt="야채빵 브루스케타" style="width: 100px; height: 100px; margin-bottom: 10px;">
+            야채빵 브루스케타
+            <p>바삭한 바게트 위에 신선한 토마토와 허브가 어우러진 가벼운 스타터입니다.</p>
+          </li>
         </ul>
+      </div>
+
+      <!-- 메인코스 -->
+      <div class="menu-category">
+        <h2>Main Course</h2>
+        <ul>
+          <li>
+            <img src="steak.jpg" alt="토마토 치즈 그릴" style="width: 100px; height: 100px; margin-bottom: 10px;">
+            토마토 치즈 그릴
+            <p>오븐에서 구워낸 토마토와 녹은 치즈의 풍미가 입안 가득 퍼집니다.</p>
+          </li>
+          <li>
+            <img src="ramen.jpg" alt="라면" style="width: 100px; height: 100px; margin-bottom: 10px;">
+            라면 (+1000원)
+            <p>진한 국물과 탱글한 면발이 어우러진 따뜻한 한 그릇.</p>
+          </li>
+        </ul>
+      </div>
+
+      <!-- 디저트 -->
+      <div class="menu-category">
+        <h2>Dessert</h2>
+        <ul>
+          <li>
+            <img src="dessert.jpg" alt="바닐라 아이스크림" style="width: 100px; height: 100px; margin-bottom: 10px;">
+            바닐라 아이스크림 (올리브 오일 & 후추)
+            <p>올리브 오일과 후추로 완성한 달콤·짭짤한 마무리.</p>
+          </li>
+        </ul>
+      </div>
     </div>
-
-    <!-- 메뉴판 -->
-    <div class="content-container">
-        <div class="menu-categories-wrapper">
-            <!-- 주류 -->
-            <div class="menu-category">
-                <h2>Wine</h2>
-                <ul>
-                    <li>
-                        <img src="wine.png" alt="와인 이미지" style="width: 100px; height: 100px; margin-bottom: 10px;">
-                        Osborne White Porto
-                        <p>포르투갈에서 온 달콤한 화이트 포트 와인. 디저트와 완벽한 조화를 이룹니다.</p>
-                    </li>
-                </ul>
-            </div>
-
-            <!-- 음식 -->
-            <div class="menu-category">
-                <h2>Food</h2>
-                <ul>
-                    <li>
-                        <img src="ramyeon.jpg" alt="스테이크 이미지" style="width: 100px; height: 100px; display: block; margin: 0 auto;">
-                        라면 (해장용 +1000원)
-                        <p>진하고 깊은 국물 맛이 일품인 따끈따끈한 라면. 당신의 속을 든든하게 채워줄 완벽한 한 그릇. </p>
-                    </li>
-                </ul>
-            </div>
-
-            <!-- 디저트 -->
-            <div class="menu-category">
-                <h2>Dessert</h2>
-                <ul>
-                    <li>
-                        <img src="img.jpg" alt="바닐라 아이스크림 이미지" style="width: 100px; height: 100px; margin-bottom: 10px;">
-                        바닐라 아이스크림 (올리브 오일 & 후추)
-                        <p>고급스러운 바닐라 아이스크림에 신선한 올리브 오일과 풍미를 더해주는 후추를 뿌려 특별한 맛의 조화를 선사합니다. 
-                        단맛과 짭짤함이 어우러져 디저트의 새로운 경지를 경험하세요.</p>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
+  </div>
 </body>
 </html>
