--- a/index.html
+++ b/index.html
@@ -59,25 +59,35 @@
     <h1>정현식당 🍽</h1>
     <p>안녕하세요! 아래 예약 정보를 입력해주세요.</p>
 
-    <form id="reservation-form">
+    <!-- ✅ formsubmit.co로 메일 전송 -->
+    <form id="reservation-form" action="https://formsubmit.co/ilu3312@naver.com" method="POST">
+      <!-- 필수 설정 -->
+      <input type="hidden" name="_captcha" value="false">
+      <input type="hidden" name="_template" value="table">
+      <!-- 예약 후 이동 페이지 -->
+      <input type="hidden" name="_next" value="welcome.html">
+      <!-- 제목 -->
+      <input type="hidden" name="_subject" value="정현식당에 새 예약이 도착했습니다!">
+
       <label>이름</label><br>
-      <input type="text" id="name" placeholder="이름을 입력하세요" required><br><br>
+      <input type="text" name="name" id="name" placeholder="이름을 입력하세요" required><br><br>
 
       <label>예약 날짜</label><br>
-      <input type="date" id="date" required><br><br>
+      <input type="date" name="date" id="date" required><br><br>
 
       <label>예약 시간</label><br>
-      <input type="time" id="time" required><br><br>
+      <input type="time" name="time" id="time" required><br><br>
 
       <label>연락 수단</label><br>
-      <select id="contact_type" required>
+      <select name="contact_type" id="contact_type" required>
         <option value="">선택하세요</option>
         <option value="전화">전화</option>
         <option value="문자">문자</option>
+        <option value="이메일">이메일</option>
       </select><br><br>
 
       <label>연락처</label><br>
-      <input type="text" id="contact_info" placeholder="010-XXXX-XXXX" required><br><br>
+      <input type="text" name="contact_info" id="contact_info" placeholder="010-XXXX-XXXX 또는 이메일" required><br><br>
 
       <button type="submit">예약 확인</button>
     </form>
@@ -86,6 +96,7 @@
   </div>
 
   <script>
+    // 폼 제출 시 화면에 메시지 표시 + 5초 후 자동 이동
     document.getElementById("reservation-form").addEventListener("submit", function(event) {
       event.preventDefault();
 
@@ -107,7 +118,12 @@
       msg.style.display = "block";
       document.getElementById("reservation-form").style.display = "none";
 
-      // 5초 후 메뉴판으로 이동 (이름 정보를 함께 전달)
+      // 실제 이메일 전송 (FormSubmit으로 제출)
+      setTimeout(() => {
+        event.target.submit(); // 폼 실제 제출 (메일 전송)
+      }, 1000);
+
+      // 5초 후 메뉴판으로 이동
       setTimeout(() => {
         window.location.href = `welcome.html?name=${encodeURIComponent(name)}`;
       }, 5000);
